--- a/Apps/seawolf/SeaWolf/Views/SensorsView.xaml
+++ b/Apps/seawolf/SeaWolf/Views/SensorsView.xaml
@@ -10,26 +10,27 @@
              AddCommand="{Binding AddSensorCommand}"
              x:Class="SeaWolf.Views.SensorsView">
     <pge:LagoVistaContentPage.MainContent  >
-        <Grid x:Name="rootElement">
-            <Grid.RowDefinitions>
-                <RowDefinition Height="auto" />
-                <RowDefinition Height="50*" />
-                <RowDefinition Height="auto" />
-                <RowDefinition Height="50*" />
-            </Grid.RowDefinitions>
-            <Label Text="Analog Sensors" FontSize="24" />
             <ListView ItemsSource="{Binding Sensors}" SelectedItem="{Binding SelectedSensor, Mode=TwoWay}" Grid.Row="1" HasUnevenRows="True">
-                <ListView.ItemTemplate> 
+                <ListView.ItemTemplate>
                     <DataTemplate>
-                        <Grid>
-                            <Grid.ColumnDefinitions>
-                                <ColumnDefinition />
-                            </Grid.ColumnDefinitions>
-                            <Label Text="{Binding Name}" />
-                        </Grid>
+                        <ViewCell>
+                            <Grid>
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="auto"/>
+                                    <ColumnDefinition Width="*"/>
+                                    <ColumnDefinition Width="auto" />
+                                </Grid.ColumnDefinitions>
+                                <Grid.RowDefinitions>
+                                    <RowDefinition Height="auto" />
+                                    <RowDefinition Height="auto" />
+                                </Grid.RowDefinitions>
+                                <pge:Icon IconKey="fa-gear" Grid.RowSpan="2" FontSize="{StaticResource ListItemFontSize}" />
+                                <Label Text="{Binding Config.Name}" FontSize="{StaticResource ListItemFontSize}" Grid.Column="1" />
+                                <Label Text="{Binding Config.Description}" FontSize="{StaticResource ListItemDetailFontSize}" />
+                            </Grid>
+                        </ViewCell>
                     </DataTemplate>
                 </ListView.ItemTemplate>
             </ListView>
-        </Grid>
     </pge:LagoVistaContentPage.MainContent>
 </pge:LagoVistaContentPage>
