--- a/Apps/seawolf/SeaWolf/Views/ConfigureAlertsView.xaml
+++ b/Apps/seawolf/SeaWolf/Views/ConfigureAlertsView.xaml
@@ -2,6 +2,8 @@
 <pge:LagoVistaContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:pge="clr-namespace:LagoVista.XPlat.Core;assembly=LagoVista.XPlat.Core"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             Title="Configure Alerts"
+             LeftMenu="Back"
              x:Class="SeaWolf.Views.ConfigureAlertsView">
     <pge:LagoVistaContentPage.MainContent>
         <ListView ItemsSource="{Binding Sensors}" SelectedItem="{Binding SelectedSensor, Mode=TwoWay}" Grid.Row="1" HasUnevenRows="True">
