--- a/Apps/seawolf/SeaWolf/Views/SensorsView.xaml
+++ b/Apps/seawolf/SeaWolf/Views/SensorsView.xaml
@@ -4,12 +4,13 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              Title="Sensors"
              xmlns:ctls="clr-namespace:LagoVista.XPlat.Core.Controls.Common;assembly=LagoVista.XPlat.Core"
-            LeftMenu="Back"
+             LeftMenu="Back"
              HasToolBar="true"
              RightMenu="Add"
              AddCommand="{Binding AddSensorCommand}"
              x:Class="SeaWolf.Views.SensorsView">
     <pge:LagoVistaContentPage.MainContent  >
+        <Grid Padding="10">
             <ListView ItemsSource="{Binding Sensors}" SelectedItem="{Binding SelectedSensor, Mode=TwoWay}" Grid.Row="1" HasUnevenRows="True">
                 <ListView.ItemTemplate>
                 <DataTemplate>
@@ -18,5 +19,6 @@
                 </DataTemplate>
             </ListView.ItemTemplate>
             </ListView>
+        </Grid>
     </pge:LagoVistaContentPage.MainContent>
 </pge:LagoVistaContentPage>
