--- a/Apps/seawolf/SeaWolf/Views/DesignMockView.xaml
+++ b/Apps/seawolf/SeaWolf/Views/DesignMockView.xaml
@@ -3,6 +3,7 @@
     xmlns:pge="clr-namespace:LagoVista.XPlat.Core;assembly=LagoVista.XPlat.Core"
     xmlns="http://xamarin.com/schemas/2014/forms"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+    HasToolBar="False"
     xmlns:flv="clr-namespace:DLToolkit.Forms.Controls;assembly=DLToolkit.Forms.Controls.FlowListView"
     xmlns:ctl="clr-namespace:SeaWolf.Controls;assembly=SeaWolf">
     <pge:LagoVistaContentPage.MainContent>
@@ -13,55 +14,62 @@
             <!--Orange <StackLayout BackgroundColor="#FFC87F">-->
             <!--Red <StackLayout BackgroundColor="#E95C5D">-->
             <RelativeLayout AbsoluteLayout.LayoutFlags="All" AbsoluteLayout.LayoutBounds="0,0,1,0.5">
-                <Frame HeightRequest="2048" WidthRequest="2048" BackgroundColor="#55A9F2" VerticalOptions="End" Padding="0">
+                <Frame HeightRequest="2048" WidthRequest="2048" BackgroundColor="{Binding HeaderBackgroundColor}" VerticalOptions="End" Padding="0">
                     <pge:Image UWPPath="Assets" 
                                FileName="background-overlay-pixel-spaced-3.png" 
                                Opacity="0.25" 
                                Aspect="AspectFit" />
                 </Frame>
-                <Grid RelativeLayout.WidthConstraint="{ConstraintExpression Type=RelativeToParent, Property=Width}" RelativeLayout.HeightConstraint="{ConstraintExpression Type=RelativeToParent, Property=Height}">
+                <Grid Margin="0,25,0,0" RelativeLayout.WidthConstraint="{ConstraintExpression Type=RelativeToParent, Property=Width}"
+                        RelativeLayout.HeightConstraint="{ConstraintExpression Type=RelativeToParent, Property=Height}"
+                        >
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="0.25*"></ColumnDefinition>
                         <ColumnDefinition Width="0.25*"></ColumnDefinition>
                         <ColumnDefinition Width="0.25*"></ColumnDefinition>
                         <ColumnDefinition Width="0.25*"></ColumnDefinition>
                     </Grid.ColumnDefinitions>
-
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="auto" />
+                        <RowDefinition Height="auto" />
+                    </Grid.RowDefinitions>
                     <pge:Icon Grid.Column="0" 
                               IconKey="fa-map-marker" 
-                              TextColor="#212121"
+                              TextColor="{Binding HeaderForegroundColor}"
                               FontSize="36" 
                               Margin="0,20,0,0"
                               HorizontalTextAlignment="Center" />
                     <pge:Icon Grid.Column="1"
                               IconKey="fa-thermometer-half" 
-                              TextColor="#212121"
+                              TextColor="{Binding HeaderForegroundColor}"
                               FontSize="36" 
                               Margin="0,20,0,0"
                               HorizontalTextAlignment="Center" />
                     <pge:Icon Grid.Column="2" 
                               IconKey="fa-battery-half" 
-                              TextColor="#212121"
+                              TextColor="{Binding HeaderForegroundColor}"
                               FontSize="36" 
                               Margin="0,20,0,0"
                               HorizontalTextAlignment="Center" />
                     <pge:Icon Grid.Column="3" 
                               IconKey="fa-wifi" 
-                              TextColor="#212121"
+                              TextColor="{Binding HeaderForegroundColor}"
                               FontSize="36"
                               Margin="0,20,0,0"
                               HorizontalTextAlignment="Center" />
+                    <Label Grid.Row="1" Grid.ColumnSpan="4" Text="{Binding SystemStatus}" TextColor="{Binding HeaderForegroundColor}"
+                           HorizontalTextAlignment="Center" />
                 </Grid>
 
             </RelativeLayout>
             <!-- SITE HEADER -->
 
             <!-- SITE FOOTER -->
-            <RelativeLayout AbsoluteLayout.LayoutFlags="All" AbsoluteLayout.LayoutBounds="0,1,1,0.5">
+            <RelativeLayout AbsoluteLayout.LayoutFlags="All" AbsoluteLayout.LayoutBounds="0,1,1,0.75">
                 <Frame HeightRequest="2048" WidthRequest="2048" BackgroundColor="#93D7F6" VerticalOptions="End" Padding="0">
                     <pge:Image UWPPath="Assets" FileName="background-overlay-pixel-spaced-3.png" Opacity="0.25" Aspect="AspectFit" />
                 </Frame>
-                <Grid RelativeLayout.WidthConstraint="{ConstraintExpression Type=RelativeToParent, Property=Width}" RelativeLayout.HeightConstraint="{ConstraintExpression Type=RelativeToParent, Property=Height}">
+                <Grid Margin="0,0,0,10" RelativeLayout.WidthConstraint="{ConstraintExpression Type=RelativeToParent, Property=Width}" RelativeLayout.HeightConstraint="{ConstraintExpression Type=RelativeToParent, Property=Height}">
                     <Grid.RowDefinitions>
                         <RowDefinition Height="*"></RowDefinition>
                         <RowDefinition Height="70"></RowDefinition>
@@ -112,7 +120,7 @@
             <!-- SITE FOOTER -->
 
             <!-- VIEW: MAIN -->
-            <Frame CornerRadius="25" Padding="0" AbsoluteLayout.LayoutFlags="All" AbsoluteLayout.LayoutBounds="0,0,1,1" Margin="0,70,0,85" 
+            <Frame CornerRadius="25" Padding="0" AbsoluteLayout.LayoutFlags="All" AbsoluteLayout.LayoutBounds="0,0,1,1" Margin="0,120,0,85" 
                    IsVisible="{Binding Path=MainViewVisible}">
                 <StackLayout BackgroundColor="White">
                     <Frame HeightRequest="200"
@@ -155,15 +163,21 @@
                             <RowDefinition Height="auto" />
                             <RowDefinition Height="4" />
                         </Grid.RowDefinitions>
-                        <pge:IconButton IconKey="fa-arrow-left" IsVisible="{Binding IsNotFirstVessel}" Command="{Binding PreviousVesselCommand}" FontSize="36" TextColor="#55A9F2" />
-                        <Label Text="{Binding CurrentDevice.Name}" HorizontalOptions="Center" Grid.Column="1" FontSize="36" TextColor="#55A9F2" />
-                        <pge:IconButton IconKey="fa-arrow-right" Grid.Column="2"  IsVisible="{Binding IsNotLastVessel}" Command="{Binding NextVesselCommand}" FontSize="36" TextColor="#55A9F2" />
+                        <pge:IconButton IconKey="fa-arrow-left" IsVisible="{Binding IsNotFirstVessel}" VerticalOptions="Center"
+                                        Command="{Binding PreviousVesselCommand}" FontSize="24" TextColor="#55A9F2" />
+                        <Label Text="{Binding CurrentDevice.Name}" VerticalOptions="Center" HorizontalOptions="Center" Grid.Column="1" FontSize="24"
+                               TextColor="#55A9F2" />
+                        <pge:IconButton IconKey="fa-arrow-right" Grid.Column="2" VerticalOptions="Center"  IsVisible="{Binding IsNotLastVessel}"
+                                        Command="{Binding NextVesselCommand}"
+                                        FontSize="24" TextColor="#55A9F2" />
                     </Grid>
 
                     <flv:FlowListView FlowItemsSource="{Binding Sensors}" HasUnevenRows="True" FlowColumnCount="2" Margin="10">
                         <flv:FlowListView.FlowColumnTemplate>
                             <DataTemplate>
-                                <ctl:SensorHUD CardDescription="{Binding Config.Name}" IconKey="{Binding SensorType.IconKey}" CardValue="{Binding Value}" />
+                                <ctl:SensorHUD CardColor="{Binding SensorBackgroundColor}" CardForegroundColor="{Binding SensorForegroundColor}"
+                                               CardDescription="{Binding Config.Name}" IconKey="{Binding SensorType.IconKey}"
+                                               CardValue="{Binding Value}" />
                             </DataTemplate>
                         </flv:FlowListView.FlowColumnTemplate>
                     </flv:FlowListView>
@@ -259,7 +273,7 @@
             <!-- VIEW: MAIN -->
 
             <!-- VIEW: MAIN -->
-            <Frame CornerRadius="25" Padding="0" AbsoluteLayout.LayoutFlags="All" AbsoluteLayout.LayoutBounds="0,0,1,1" Margin="0,70,0,85" IsVisible="{Binding Path=MapViewVisible}">
+            <Frame CornerRadius="25" Padding="0" AbsoluteLayout.LayoutFlags="All" AbsoluteLayout.LayoutBounds="0,0,1,1" Margin="0,100,0,85" IsVisible="{Binding Path=MapViewVisible}">
                 <StackLayout BackgroundColor="White">
                     <pge:BindableMap MapType="Street" MapCenter="{Binding CurrentVeseelLocation}" GeoFences="{Binding GeoFences}" />
                 </StackLayout>
@@ -267,7 +281,7 @@
             <!-- VIEW: MAIN -->
 
             <!-- VIEW: MAIN -->
-            <Frame CornerRadius="25" Padding="0" AbsoluteLayout.LayoutFlags="All" AbsoluteLayout.LayoutBounds="0,0,1,1" Margin="0,70,0,85" IsVisible="{Binding Path=AlertsViewVisible}">
+            <Frame CornerRadius="25" Padding="0" AbsoluteLayout.LayoutFlags="All" AbsoluteLayout.LayoutBounds="0,0,1,1" Margin="0,100,0,85" IsVisible="{Binding Path=AlertsViewVisible}">
                 <StackLayout BackgroundColor="White" Padding="25">
                     <Label Text="Alerts coming soon" FontSize="24" />
                 </StackLayout>
