--- a/Apps/seawolf/SeaWolf/Views/ConfigureAlertsView.xaml
+++ b/Apps/seawolf/SeaWolf/Views/ConfigureAlertsView.xaml
@@ -8,7 +8,7 @@
              x:Class="SeaWolf.Views.ConfigureAlertsView">
     <pge:LagoVistaContentPage.MainContent>
         <Grid Padding="10">
-            <ListView ItemsSource="{Binding Sensors}" SelectedItem="{Binding SelectedSensor, Mode=TwoWay}" Grid.Row="1" HasUnevenRows="True" >
+            <ListView ItemsSource="{Binding Sensors}" SelectedItem="{Binding SelectedSensor, Mode=TwoWay}" HasUnevenRows="True" >
                 <ListView.ItemTemplate>
                     <DataTemplate>
                         <ctls:NavigationViewCell Text="{Binding Config.Name}"  
