--- a/Apps/seawolf/SeaWolf/Controls/SensorHUD.xaml
+++ b/Apps/seawolf/SeaWolf/Controls/SensorHUD.xaml
@@ -9,9 +9,9 @@
              Margin="10"
              x:Class="SeaWolf.Controls.SensorHUD">
     <Frame BindingContext="{x:Reference this}"
-           HasShadow="True"
+           HasShadow="False"
            Padding="8"
-           BackgroundColor="{Binding CardColor}"
+           BackgroundColor="Transparent"
            VerticalOptions="Center"
            HorizontalOptions="Center">
         <Grid>
@@ -28,21 +28,21 @@
                 Grid.Row="0"
                 Grid.ColumnSpan="2" 
                 Text="{Binding CardDescription, FallbackValue='Card description text.'}"
-                TextColor="{Binding CardForegroundColor}"
+                TextColor="#666666"
                 FontSize="14" 
                 FontAttributes="Bold" />    
             <pge:Icon 
                 Grid.Row="1" 
                 Grid.Column="0"
                 IconKey="{Binding IconKey}" 
-                TextColor="{Binding CardForegroundColor}"
+                TextColor="{Binding CardColor}"
                 FontSize="26" />
             <Label 
                 Grid.Row="1" 
                 Grid.Column="1" 
                 Margin="0,-20,0,0"
                 Text="{Binding CardValue, FallbackValue='xx'}"
-                TextColor="{Binding CardForegroundColor}"
+                TextColor="{Binding CardColor}"
                 FontSize="64" 
                 CharacterSpacing="-0.5"
                 />
