--- a/Apps/seawolf/SeaWolf/Views/DesignMockView.xaml
+++ b/Apps/seawolf/SeaWolf/Views/DesignMockView.xaml
@@ -106,7 +106,7 @@
                         <pge:Image UWPPath="Assets" FileName="logo-seawolf-white.png"
                                Aspect="AspectFit"
                                WidthRequest="185"
-                               Margin="0,-1,0,0" />
+                               Margin="0,5,0,0" />
                     </StackLayout>
                     <pge:IconButton Grid.Row="1" Grid.Column="5" 
                               IconKey="fa-bars" 
