--- a/Apps/seawolf/SeaWolf/Views/DesignMockView.xaml
+++ b/Apps/seawolf/SeaWolf/Views/DesignMockView.xaml
@@ -14,7 +14,7 @@
             <!--Orange <StackLayout BackgroundColor="#FFC87F">-->
             <!--Red <StackLayout BackgroundColor="#E95C5D">-->
             <RelativeLayout AbsoluteLayout.LayoutFlags="All" AbsoluteLayout.LayoutBounds="0,0,1,0.5">
-                <Frame HeightRequest="2048" WidthRequest="2048" BackgroundColor="{Binding HeaderBackgroundColor}" VerticalOptions="End" Padding="0">
+                <Frame HeightRequest="2048" WidthRequest="2048" BackgroundColor="{Binding HeaderBackgroundColor}" VerticalOptions="End" Padding="0" HasShadow="False">
                     <pge:Image UWPPath="Assets" 
                                FileName="background-overlay-pixel-spaced-3.png" 
                                Opacity="0.25" 
@@ -66,7 +66,7 @@
 
             <!-- SITE FOOTER -->
             <RelativeLayout AbsoluteLayout.LayoutFlags="All" AbsoluteLayout.LayoutBounds="0,1,1,0.75">
-                <Frame HeightRequest="2048" WidthRequest="2048" BackgroundColor="#93D7F6" VerticalOptions="End" Padding="0">
+                <Frame HeightRequest="2048" WidthRequest="2048" BackgroundColor="#93D7F6" VerticalOptions="End" Padding="0" HasShadow="False">
                     <pge:Image UWPPath="Assets" FileName="background-overlay-pixel-spaced-3.png" Opacity="0.25" Aspect="AspectFit" />
                 </Frame>
                 <Grid Margin="0,0,0,10" RelativeLayout.WidthConstraint="{ConstraintExpression Type=RelativeToParent, Property=Width}" RelativeLayout.HeightConstraint="{ConstraintExpression Type=RelativeToParent, Property=Height}">
@@ -84,35 +84,32 @@
                         <ColumnDefinition Width="0.025*"></ColumnDefinition>
                     </Grid.ColumnDefinitions>
 
-                    <pge:IconButton Grid.Row="1" Grid.Column="1"
+                    <pge:IconButton Grid.Row="1" Grid.Column="1" VerticalOptions="Center"
                           IconKey="fa-home" 
                           TextColor="#FFFFFF"
                           FontSize="28" 
-                          Margin="0,-10,0,0"
                           Command="{Binding Path=ViewMainCommand}" />
-                    <pge:IconButton Grid.Row="1" Grid.Column="2"
+                    <pge:IconButton Grid.Row="1" Grid.Column="2" VerticalOptions="Center"
                           IconKey="fa-map" 
                           TextColor="#FFFFFF"
                           FontSize="28" 
-                          Margin="0,-10,0,0"
                           Command="{Binding Path=ViewMapCommand}" />
-                    <pge:IconButton Grid.Row="1" Grid.Column="3"
+                    <pge:IconButton Grid.Row="1" Grid.Column="3" VerticalOptions="Center"
                               IconKey="fa-bell" 
                               TextColor="#FFFFFF"
                               FontSize="28" 
-                              Margin="0,-10,0,0"
                               Command="{Binding Path=ViewAlertsCommand}" />
-                    <StackLayout Grid.Row="1" Grid.Column="4">
+                    <StackLayout Grid.Row="1" Grid.Column="4" VerticalOptions="Center">
                         <pge:Image UWPPath="Assets" FileName="logo-seawolf-white.png"
                                Aspect="AspectFit"
-                               WidthRequest="185"
-                               Margin="0,5,0,0" />
+                               VerticalOptions="Center"
+                               Margin="0,-5,0,0"
+                               />
                     </StackLayout>
-                    <pge:IconButton Grid.Row="1" Grid.Column="5" 
+                    <pge:IconButton Grid.Row="1" Grid.Column="5" VerticalOptions="Center" 
                               IconKey="fa-bars" 
                               TextColor="#FFFFFF"
                               FontSize="28"
-                              Margin="0,-10,0,0"
                               Command="{Binding Path=ViewSettingsCommand}" />
                 </Grid>
 
@@ -127,47 +124,51 @@
                 IsClippedToBounds="True"
                 IsVisible="{Binding Path=MainViewVisible}">
                 <StackLayout BackgroundColor="White">
-                    <Frame HeightRequest="200"
+                    <Frame HeightRequest="300"
                            BackgroundColor="#FFFFFF" 
                            Padding="0"
                            Margin="0"
                            CornerRadius="0"
                            HasShadow="False">
-                        <AbsoluteLayout>
+                        <AbsoluteLayout Margin="0" Padding="0">
                             <pge:BindableMap 
                                 AbsoluteLayout.LayoutFlags="All" 
                                 AbsoluteLayout.LayoutBounds="0,0,1,1"
                                 MapType="Street" 
                                 MapCenter="{Binding CurrentVeseelLocation}" 
-                                GeoFences="{Binding GeoFences}" 
+                                GeoFences="{Binding GeoFences}"
+                                Margin="0"
                                 />
                         </AbsoluteLayout>
                     </Frame>
 
-                    <Grid>
+
+
+                    <Grid BackgroundColor="#F0F0F0" Margin="0" Padding="0">
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="60" />
                             <ColumnDefinition Width="*" />
                             <ColumnDefinition Width="60" />
                         </Grid.ColumnDefinitions>
                         <Grid.RowDefinitions>
-                            <RowDefinition Height="auto" />
-                            <RowDefinition Height="4" />
+                            <RowDefinition Height="50" />
                         </Grid.RowDefinitions>
                         <pge:IconButton IconKey="fa-arrow-left" IsVisible="{Binding IsNotFirstVessel}" VerticalOptions="Center"
                                         Command="{Binding PreviousVesselCommand}" FontSize="24" TextColor="#55A9F2" />
                         <Label Text="{Binding CurrentDevice.Name}" VerticalOptions="Center" HorizontalOptions="Center" Grid.Column="1" FontSize="24"
-                               TextColor="#55A9F2" />
+                                TextColor="#55A9F2" />
                         <pge:IconButton IconKey="fa-arrow-right" Grid.Column="2" VerticalOptions="Center"  IsVisible="{Binding IsNotLastVessel}"
                                         Command="{Binding NextVesselCommand}"
                                         FontSize="24" TextColor="#55A9F2" />
                     </Grid>
 
-                    <flv:FlowListView FlowItemsSource="{Binding Sensors}" HasUnevenRows="True" FlowColumnCount="2" Margin="10">
+                    <flv:FlowListView FlowItemsSource="{Binding Sensors}" HasUnevenRows="True" FlowColumnCount="1" Margin="0">
                         <flv:FlowListView.FlowColumnTemplate>
                             <DataTemplate>
-                                <ctl:SensorHUD CardColor="{Binding SensorBackgroundColor}" CardForegroundColor="{Binding SensorForegroundColor}"
-                                               CardDescription="{Binding Config.Name}" IconKey="{Binding SensorType.IconKey}"
+                                <ctl:SensorHUD CardColor="{Binding SensorBackgroundColor}"
+                                               CardForegroundColor="{Binding SensorForegroundColor}"
+                                               CardDescription="{Binding Config.Name}"
+                                               IconKey="{Binding SensorType.IconKey}"
                                                CardValue="{Binding Value}" />
                             </DataTemplate>
                         </flv:FlowListView.FlowColumnTemplate>
